--- a/JEDI-Flipkart-Group-D-Flipfit-POS/src/config.properties
+++ b/JEDI-Flipkart-Group-D-Flipfit-POS/src/config.properties
@@ -1,6 +1,6 @@
 driver=com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://localhost:3306/FlipFit_Database
 user=root
-password=
+password=oeto3Eex!@#%
 admin_id=admin
 admin_password=admin
