--- a/JEDI-Flipkart-FlipFit-DropWizard/pom.xml
+++ b/JEDI-Flipkart-FlipFit-DropWizard/pom.xml
@@ -12,7 +12,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <dropwizard.version>2.0.33</dropwizard.version>
-        <mainClass>com.dropwizard.App</mainClass>
+        <mainClass>com.flipkart.app.App</mainClass>
     </properties>
     <dependencyManagement>
         <dependencies>
